--- a/web/package.json
+++ b/web/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "dayjs": "^1.11.10",
+    "jotai": "^2.7.2",
     "lucide-react": "^0.363.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
