--- a/web/package.json
+++ b/web/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "dayjs": "^1.11.10",
     "jotai": "^2.7.2",
     "lucide-react": "^0.363.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
+    "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.22.3",
-    "tailwind-merge": "^2.2.2"
+    "react-toastify": "^10.0.5",
+    "tailwind-merge": "^2.2.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
