--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.12.5",
     "dotenv": "^16.4.5",
     "prisma": "^5.12.1",
@@ -26,13 +27,16 @@
     "typescript": "^5.4.4"
   },
   "dependencies": {
-    "@fastify/cors": "^9.0.1",
-    "@fastify/swagger": "^8.14.0",
-    "@fastify/swagger-ui": "^3.0.0",
-    "@prisma/client": "^5.12.1",
-    "dayjs": "^1.11.10",
-    "fastify": "^4.26.2",
-    "fastify-type-provider-zod": "^1.1.9",
-    "zod": "^3.22.4"
+    "@fastify/cors": "^11.0.0",
+    "@fastify/jwt": "^9.0.4",
+    "@fastify/swagger": "^9.4.2",
+    "@fastify/swagger-ui": "^5.2.2",
+    "@prisma/client": "^6.4.1",
+    "bcryptjs": "^3.0.2",
+    "dayjs": "^1.11.13",
+    "fastify": "^5.2.1",
+    "fastify-plugin": "^5.0.1",
+    "fastify-type-provider-zod": "^4.0.2",
+    "zod": "^3.24.2"
   }
 }
