--- a/web/package.json
+++ b/web/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
     "@hookform/resolvers": "^3.3.4",
     "dayjs": "^1.11.10",
+    "framer-motion": "^11.1.7",
     "jotai": "^2.7.2",
     "lucide-react": "^0.363.0",
     "react": "^18.2.0",
@@ -21,6 +23,7 @@
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.2",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -28,6 +31,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
